# ffiseg

./: CMakeLists.txt  README.md
cmake/: googletest-download.cmake
demos/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  ogl_headers.hpp  timer.cpp  timer.hpp
demos/ballistic/: CMakeLists.txt  ballistic.cpp
demos/cloth/: .cloth.cpp.swp  CMakeLists.txt  cloth.cpp
demos/cube/: CMakeLists.txt  cube.cpp
demos/deformable/: CMakeLists.txt  deformable.cpp
demos/fireworks/: CMakeLists.txt  fireworks.cpp
demos/platform/: CMakeLists.txt  platform.cpp
demos/slug/: CMakeLists.txt  slug.cpp
demos/spring/: CMakeLists.txt  spring.cpp
demos/spring_collide/: CMakeLists.txt  spring_collide.cpp
demos/wobble_cube/: CMakeLists.txt  wobble_cube.cpp
demos/wobble_cube_basic/: CMakeLists.txt  wobble_cube_basic.cpp
include/: CMakeLists.txt
include/ffiseg/: core.hpp  ffiseg.hpp  particle.hpp  particle_contact.hpp  particle_force_generator.hpp  particle_link.hpp  particle_world.hpp  precision.hpp  random.hpp  random_generator.hpp  timer.hpp
include/ffiseg/tests/: CMakeLists.txt  core_test.cpp
src/: CMakeLists.txt  core.cpp  particle.cpp  particle_contact.cpp  particle_force_generator.cpp  particle_link.cpp  particle_world.cpp  random.cpp  random_generator.cpp  timer.cpp
tests/: CMakeLists.txt  core_test.cpp  particle_force_generator_test.cpp  particle_link_test.cpp  particle_test.cpp  random_generator_test.cpp  random_test.cpp  timer_test.cpp
