find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
add_library(application application.cpp application.hpp)
include_directories( ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} )
target_link_libraries(application ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} )
target_link_libraries(application particle_world core particle_contact particle_force_generator )

add_subdirectory(ballistic)
add_subdirectory(fireworks)
add_subdirectory(platform)
add_subdirectory(spring)
add_subdirectory(cloth)
add_subdirectory(cube)
add_subdirectory(wobble_cube_basic)
