
add_executable(core_test core_test.cpp)
target_link_libraries(core_test gtest_main)
add_test(NAME core_test COMMAND core_test)

add_executable(particle_test particle_test.cpp)
target_link_libraries(particle_test particle gtest_main)
add_test(NAME particle_test COMMAND particle_test)

add_executable(timer_test timer_test.cpp)
target_link_libraries(timer_test timer gtest_main)
add_test(NAME timer_test COMMAND timer_test)

add_executable(random_generator_test random_generator_test.cpp)
target_link_libraries(random_generator_test random_generator gtest_main)
add_test(NAME random_generator_test COMMAND random_generator_test)

add_executable(particle_force_generator_test particle_force_generator_test.cpp)
target_link_libraries(particle_force_generator_test particle_force_generator gtest_main)
add_test(NAME particle_force_generator_test COMMAND particle_force_generator_test)
